--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,7 @@
 
 @font-face {
     font-family: "Inter";
-    src: url("Inter-Medium.ttf")
+    src: url("/src/Inter-Medium.ttf")
   }
 
 /* ----------------------------- SIDEBAR --------------------------*/
@@ -283,7 +283,7 @@
 }
 
 .login-formulario{
-    width: 80%;
+    width: 95%;
     height: 700px;
     border-radius: 35px;
     overflow: hidden;
