--- a/src/App.css
+++ b/src/App.css
@@ -162,7 +162,7 @@
     flex-direction: column;
     height: 100vh;
     align-items: center;
-    background-image: url("/public/imgs/wallpaper_onepiece.jpg");
+    background-image: url("/public/imgs/sea.png");
     background-size: cover;
     color: white;
     
